# dicomImageProcessor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
DicomImageProcessor/: CMakeLists.txt  DicomImageProcessor.cpp  DicomImageProcessor.h  DicomImageUI.cpp  DicomImageUI.h  main.cpp
UnitTest/: CMakeLists.txt  DicomImageProcessorUnitTest.cpp
dicom/: 2174d2be-ccf6-4235-bd5f-afd400d96f86.json  2174d2be-ccf6-4235-bd5f-afd400d96f86.tif  2248d6d6-4f4f-4aba-8695-afd400d96f36.dcm
